--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
       <!-- banner section end -->
      </header>
     <!-- header section end -->
+    <!-- ourService section start -->
+     <section id="services">
+      <div class="container mx-auto px-5 xl:p-10">
+        <!-- title section start -->
+        <div>
+          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic text-center border-b-2 border-black pb-1 lg:pb-2 w-[65%] sm:w-[38%] md:w-[35%] lg:w-[32%] xl:w-[30%] 2xl:w-[33%] mx-auto">--Our Services--</h3>
+          <p class="w-full sm:w-[78%] md:w-[73%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">Our home service is dedicated to providing exceptional quality and convenience, ensuring that every client feels valued and supported. With a team of experienced professionals.</p>
+         </div>
+        <!-- title section end -->
+        <!-- content section start -->
+         <div class="gird grid-cols-2 gap-5">
+          <!-- item start -->
+          <!-- item end -->
+         </div>
+        <!-- content section end -->
+      </div>
+     </section>
+    <!-- ourService section end -->
     <!-- footer section start -->
      <section class="py-12 bg-[#E76F51]">
       <div class="container mx-auto px-5 sm:px-3 md:px-4 lg:px-5">
