responsive the services section

--- a/index.html
+++ b/index.html
@@ -91,9 +91,128 @@
          </div>
         <!-- title section end -->
         <!-- content section start -->
-         <div class="gird grid-cols-2 gap-5">
+         <div class="grid grid-cols-1 sm:grid-cols-2 gap-5 sm:gap-3 md:gap-4 lg:gap-5 xl:gap-5 my-5">
           <!-- item start -->
+           <div class="border-[1px] border-gray-200 p-5 flex flex-col sm:flex-row items-center justify-between gap-3 sm:gap-4 md:gap-4 lg:gap-6 rounded-xl">
+            <!-- img start -->
+             <div class="flex-2">
+              <img src="/img/services/img1.png" class="w-full h-28 sm:w-full sm:h-20 md:w-full md:h-24 lg:w-full lg:h-28 xl:h-32 xl:w-full 2xl:w-full 2xl:h-40">
+             </div>
+             <div class="flex-1">
+              <h2 class="text-lg sm:text-xs md:text-base lg:text-lg xl:text-2xl 2xl:text-3xl font-bold text-[#FF4240]">Design Consultation</h2>
+              <p class="text-xs sm:text-[10px] md:text-xs lg:text-sm xl:text-base 2xl:text-lg text-gray-400">The visual appeal and beauty of a design, influencing how users perceive and interact </p>
+              <p>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+              </p>
+             </div>
+            <!-- img end -->
+           </div>
           <!-- item end -->
+          <!-- item start -->
+           <div class="border-[1px] border-gray-200 p-5 flex flex-col sm:flex-row items-center justify-between gap-3 sm:gap-4 md:gap-4 lg:gap-6 rounded-xl">
+            <!-- img start -->
+             <div class="flex-2">
+              <img src="/img/services/img2.png" class="w-full h-28 sm:w-full sm:h-20 md:w-full md:h-24 lg:w-full lg:h-28 xl:h-32 xl:w-full 2xl:w-full 2xl:h-40">
+             </div>
+             <div class="flex-1">
+              <h2 class="text-lg sm:text-xs md:text-base lg:text-lg xl:text-2xl 2xl:text-3xl font-bold text-[#FF4240]">Project Management</h2>
+              <p class="text-xs sm:text-[10px] md:text-xs lg:text-sm xl:text-base 2xl:text-lg text-gray-400">A schedule outlining project milestones and deadlines</p>
+              <p>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+              </p>
+             </div>
+            <!-- img end -->
+           </div>
+          <!-- item end -->
+          <!-- item start -->
+           <div class="border-[1px] border-gray-200 p-5 flex flex-col sm:flex-row items-center justify-between gap-3 sm:gap-4 md:gap-4 lg:gap-6 rounded-xl">
+            <!-- img start -->
+             <div class="flex-2">
+              <img src="/img/services/img3.png" class="w-full h-28 sm:w-full sm:h-20 md:w-full md:h-24 lg:w-full lg:h-28 xl:h-32 xl:w-full 2xl:w-full 2xl:h-40">
+             </div>
+             <div class="flex-1">
+              <h2 class="text-lg sm:text-xs md:text-base lg:text-lg xl:text-2xl 2xl:text-3xl font-bold text-[#FF4240]">Material Selection</h2>
+              <p class="text-xs sm:text-[10px] md:text-xs lg:text-sm xl:text-base 2xl:text-lg text-gray-400">Consider environmental impact and the recyclability of materials</p>
+              <p>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+              </p>
+             </div>
+            <!-- img end -->
+           </div>
+          <!-- item end -->
+          <!-- item start -->
+           <div class="border-[1px] border-gray-200 p-5 flex flex-col sm:flex-row items-center justify-between gap-3 sm:gap-4 md:gap-4 lg:gap-6 rounded-xl">
+            <!-- img start -->
+             <div class="flex-2">
+              <img src="/img/services/img4.png" class="w-full h-28 sm:w-full sm:h-20 md:w-full md:h-24 lg:w-full lg:h-28 xl:h-32 xl:w-full 2xl:w-full 2xl:h-40">
+             </div>
+             <div class="flex-1">
+              <h2 class="text-lg sm:text-xs md:text-base lg:text-lg xl:text-2xl 2xl:text-3xl font-bold text-[#FF4240]">Budget Planning</h2>
+              <p class="text-xs sm:text-[10px] md:text-xs lg:text-sm xl:text-base 2xl:text-lg text-gray-400">Clearly outline the goals of the project to understand what needs funding</p>
+              <p>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+              </p>
+             </div>
+            <!-- img end -->
+           </div>
+          <!-- item end -->
+          <!-- item start -->
+           <div class="border-[1px] border-gray-200 p-5 flex flex-col sm:flex-row items-center justify-between gap-3 sm:gap-4 md:gap-4 lg:gap-6 rounded-xl">
+            <!-- img start -->
+             <div class="flex-2">
+              <img src="/img/services/img5.png" class="w-full h-28 sm:w-full sm:h-20 md:w-full md:h-24 lg:w-full lg:h-28 xl:h-32 xl:w-full 2xl:w-full 2xl:h-40">
+             </div>
+             <div class="flex-1">
+              <h2 class="text-lg sm:text-xs md:text-base lg:text-lg xl:text-2xl 2xl:text-3xl font-bold text-[#FF4240]">Site Visits</h2>
+              <p class="text-xs sm:text-[10px] md:text-xs lg:text-sm xl:text-base 2xl:text-lg text-gray-400">Before the visit, review project plans, relevant documents, and specific objectives for the site assessment</p>
+              <p>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+              </p>
+             </div>
+            <!-- img end -->
+           </div>
+          <!-- item end -->
+          <!-- item start -->
+           <div class="border-[1px] border-gray-200 p-5 flex flex-col sm:flex-row items-center justify-between gap-3 sm:gap-4 md:gap-4 lg:gap-6 rounded-xl">
+            <!-- img start -->
+             <div class="flex-2">
+              <img src="/img/services/img6.png" class="w-full h-28 sm:w-full sm:h-20 md:w-full md:h-24 lg:w-full lg:h-28 xl:h-32 xl:w-full 2xl:w-full 2xl:h-40">
+             </div>
+             <div class="flex-1">
+              <h2 class="text-lg sm:text-xs md:text-base lg:text-lg xl:text-2xl 2xl:text-3xl font-bold text-[#FF4240]">Post-Construction Support</h2>
+              <p class="text-xs sm:text-[10px] md:text-xs lg:text-sm xl:text-base 2xl:text-lg text-gray-400">Conduct thorough inspections to ensure all work meets quality standards and project specifications</p>
+              <p>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+                <i class='bx bxs-star text-xs sm:text-[11px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl text-yellow-400'></i>
+              </p>
+             </div>
+            <!-- img end -->
+           </div>
+          <!-- item end -->
+
          </div>
         <!-- content section end -->
       </div>
