create best project section with mobile responsive

--- a/index.html
+++ b/index.html
@@ -218,6 +218,57 @@
       </div>
      </section>
     <!-- ourService section end -->
+    <!-- best-project section start -->
+     <section class="mb-10">
+      <div class="container mx-auto px-5 xl:px-10">
+        <!-- title section start -->
+        <div>
+          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic text-center border-b-2 border-black pb-1 lg:pb-2 w-[65%] sm:w-[38%] md:w-[35%] lg:w-[32%] xl:w-[25%] 2xl:w-[33%] mx-auto">--Best Project--</h3>
+          <p class="w-full sm:w-[78%] md:w-[73%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">Our home service is dedicated to providing exceptional quality and convenience, ensuring that every client feels valued and supported. With a team of experienced professionals.</p>
+         </div>
+        <!-- title section end -->
+        <!-- content section start -->
+         <div class="grid grid-cols-1 sm:grid-cols-2 gap-3 sm:gap-2 md:gap-3 lg:gap-4 xl:gap-5 my-5">
+          <!-- item start -->
+           <div class="h-36 sm:h-40 md:h-48 lg:h-56 xl:h-64 2xl:h-72 overflow-hidden rounded-xl relative">
+            <img src="/img/bestWork/img1.jpg" class="w-full h-full">
+            <div class="bg-[#131318] w-full h-full absolute top-0 bottom-0 right-0 left-0 bg-opacity-55 flex flex-col justify-end p-5">
+              <ul>
+                <li class="text-sm sm:text-base md:text-lg lg:text-xl xl:text-3xl 2xl:text-4xl text-[#FF4240] font-bold">Mansion House</li>
+                <li class="text-[10px] sm:text-xs md:text-sm lg:text-base xl:text-base 2xl:text-xl text-slate-200">Mansions typically incorporate advanced security systems, gated <br class="hidden 2xl:block">entries, and surveillance to ensure privacy and safety</li>
+              </ul>
+            </div>
+           </div>
+          <!-- item end -->
+          <!-- item start -->
+           <div class="h-36 sm:h-40 md:h-48 lg:h-56 xl:h-64 2xl:h-72 overflow-hidden rounded-xl relative">
+            <img src="/img/bestWork/img2.jpg" class="w-full h-full">
+            <div class="bg-[#131318] w-full h-full absolute top-0 bottom-0 right-0 left-0 bg-opacity-55 flex flex-col justify-end p-5">
+              <ul>
+                <li class="text-sm sm:text-base md:text-lg lg:text-lg xl:text-3xl 2xl:text-4xl text-[#FF4240] font-bold">Luxury Resort</li>
+                <li class="text-[10px] sm:text-xs md:text-sm lg:text-base xl:text-base 2xl:text-xl text-slate-200">Select a stunning, accessible site that offers natural beauty <br class="hidden 2xl:block">and attractions, enhancing the guest experience</li>
+              </ul>
+            </div>
+
+            </div>
+           </div>
+          <!-- item end -->
+          <!-- item start -->
+           <div class="h-36 sm:h-44 md:h-52 lg:h-64 xl:h-80 2xl:h-96 overflow-hidden rounded-xl sm:col-span-2 relative -mt-2 xl:-mt-1">
+            <img src="/img/bestWork/img3.jpg" class="w-full h-full">
+            <div class="bg-[#131318] w-full h-full absolute top-0 bottom-0 right-0 left-0 bg-opacity-55 flex flex-col justify-end p-5">
+              <ul>
+                <li class="text-sm sm:text-base md:text-lg lg:text-xl xl:text-3xl 2xl:text-4xl text-[#FF4240] font-bold">Duplex House</li>
+                <li class="text-[10px] sm:text-xs md:text-sm lg:text-base xl:text-base 2xl:text-xl text-slate-200">Duplexes can be designed in various styles, from modern to traditional,<br class="hidden sm:block"> allowing for personalization based on homeowner preferences</li>
+              </ul>
+            </div>
+           </div>
+          <!-- item end -->
+         </div>
+        <!-- content section end -->
+      </div>
+     </section>
+    <!-- best-project section end -->
     <!-- footer section start -->
      <section class="py-12 bg-[#E76F51]">
       <div class="container mx-auto px-5 sm:px-3 md:px-4 lg:px-5">
