create faqs section

--- a/index.html
+++ b/index.html
@@ -269,6 +269,18 @@
       </div>
      </section>
     <!-- best-project section end -->
+     <!-- faqs section start -->
+      <section id="faqs" class="mt-5 mb-10">
+        <div class="container mx-auto px-5 xl:px-10">
+          <!-- title section start -->
+        <div>
+          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic text-center border-b-2 border-black pb-1 lg:pb-2 w-[65%] sm:w-[38%] md:w-[35%] lg:w-[32%] xl:w-[45%] 2xl:w-[33%] mx-auto">--Frequently Asked questions--</h3>
+          <p class="w-full sm:w-[78%] md:w-[73%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">Frequently asked questions (FAQs) that might arise regarding various topics in real estate, project management, or luxury living.</p>
+         </div>
+        <!-- title section end -->
+        </div>
+      </section>
+     <!-- faqs section end -->
     <!-- footer section start -->
      <section class="py-12 bg-[#E76F51]">
       <div class="container mx-auto px-5 sm:px-3 md:px-4 lg:px-5">
