--- a/index.html
+++ b/index.html
@@ -273,11 +273,61 @@
       <section id="faqs" class="mt-5 mb-10">
         <div class="container mx-auto px-5 xl:px-10">
           <!-- title section start -->
-        <div>
-          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic text-center border-b-2 border-black pb-1 lg:pb-2 w-[65%] sm:w-[38%] md:w-[35%] lg:w-[32%] xl:w-[45%] 2xl:w-[33%] mx-auto">--Frequently Asked questions--</h3>
+        <div class="text-center">
+          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic border-b-2 border-black pb-1 lg:pb-2  inline-block">--Frequently Asked questions--</h3>
           <p class="w-full sm:w-[78%] md:w-[73%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">Frequently asked questions (FAQs) that might arise regarding various topics in real estate, project management, or luxury living.</p>
          </div>
         <!-- title section end -->
+         <!-- content section start -->
+          <div class="flex flex-col sm:flex-row justify-center items-center xl:gap-6 my-6">
+            <!-- left start -->
+             <div class="flex-1">
+              <img src="/img/faqs/faqs.png" class="w-full h-56 sm:h-96 md:h-96 lg:h-96 xl:h-96 2xl:h-96">
+             </div>
+            <!-- left end -->
+             <!-- right start -->
+              <div class="flex-1">
+                <div class="join join-vertical w-full">
+                  <div class="collapse collapse-arrow join-item border-base-300 border">
+                    <input type="radio" name="my-accordion-4" checked="checked" />
+                    <div class="collapse-title text-sm sm:text-xs md:text-[13px] lg:text-sm xl:text-lg 2xl:text-xl font-medium text-white bg-[#FF4240]"> What are the first steps in the home building process?</div>
+                    <div class="collapse-content">
+                      <p class="text-[10px] sm:text-[9px] md:text-[10px] lg:text-[11px] xl:text-sm 2xl:text-lg">The first steps include determining your budget, choosing a suitable location, and designing your home. It’s important to work with a qualified builder or architect to create plans that meet your needs and comply with local regulations</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow join-item border-base-300 border">
+                    <input type="radio" name="my-accordion-4" />
+                    <div class="collapse-title text-sm sm:text-xs md:text-[13px] lg:text-sm xl:text-lg 2xl:text-xl font-medium text-white bg-[#FF4240]">How long does it typically take to build a home?</div>
+                    <div class="collapse-content">
+                      <p class="text-[10px] sm:text-[9px] md:text-[10px] lg:text-[11px] xl:text-sm 2xl:text-lg">The timeline for building a home varies based on factors like size, design complexity, and weather conditions. On average, it takes about 6 to 12 months from breaking ground to completion. However, custom builds may take longer</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow join-item border-base-300 border">
+                    <input type="radio" name="my-accordion-4" />
+                    <div class="collapse-title text-sm sm:text-xs md:text-[13px] lg:text-sm xl:text-lg 2xl:text-xl font-medium text-white bg-[#FF4240]">What financing options are available for building a home?</div>
+                    <div class="collapse-content">
+                      <p class="text-[10px] sm:text-[9px] md:text-[10px] lg:text-[11px] xl:text-sm 2xl:text-lg">Common financing options include construction loans, home equity loans, and traditional mortgages. It’s advisable to consult with a financial advisor or lender to find the best option for your situation</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow join-item border-base-300 border">
+                    <input type="radio" name="my-accordion-4" />
+                    <div class="collapse-title text-sm sm:text-xs md:text-[13px] lg:text-sm xl:text-lg 2xl:text-xl font-medium text-white bg-[#FF4240]">Do I need a permit to build a house?</div>
+                    <div class="collapse-content">
+                      <p class="text-[10px] sm:text-[9px] md:text-[10px] lg:text-[11px] xl:text-sm 2xl:text-lg">Yes, most local governments require building permits for new construction. These permits ensure that your project complies with zoning laws and building codes. It’s essential to check with your local building authority for specific requirements</p>
+                    </div>
+                  </div>
+                  <div class="collapse collapse-arrow join-item border-base-300 border">
+                    <input type="radio" name="my-accordion-4" />
+                    <div class="collapse-title text-sm sm:text-xs md:text-[13px] lg:text-sm xl:text-lg 2xl:text-xl font-medium text-white bg-[#FF4240]">Can I customize my home design?</div>
+                    <div class="collapse-content">
+                      <p class="text-[10px] sm:text-[9px] md:text-[10px] lg:text-[11px] xl:text-sm 2xl:text-lg">Absolutely! Many builders offer customizable plans that allow you to tailor features such as layout, materials, and finishes to fit your preferences. Be sure to discuss your ideas with your builder early in the process to ensure they can accommodate your vision</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+             <!-- right end -->
+          </div>
+         <!-- content section end -->
         </div>
       </section>
      <!-- faqs section end -->
