creating our sponsored section

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
      <section id="services">
       <div class="container mx-auto px-5 xl:p-10">
         <!-- title section start -->
-        <div>
-          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic text-center border-b-2 border-black pb-1 lg:pb-2 w-[65%] sm:w-[38%] md:w-[35%] lg:w-[32%] xl:w-[30%] 2xl:w-[33%] mx-auto">--Our Services--</h3>
+        <div class="text-center">
+          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic border-b-2 border-black pb-1 lg:pb-2 inline-block">--Our Services--</h3>
           <p class="w-full sm:w-[78%] md:w-[73%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">Our home service is dedicated to providing exceptional quality and convenience, ensuring that every client feels valued and supported. With a team of experienced professionals.</p>
          </div>
         <!-- title section end -->
@@ -222,8 +222,8 @@
      <section class="mb-10">
       <div class="container mx-auto px-5 xl:px-10">
         <!-- title section start -->
-        <div>
-          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic text-center border-b-2 border-black pb-1 lg:pb-2 w-[65%] sm:w-[38%] md:w-[35%] lg:w-[32%] xl:w-[25%] 2xl:w-[33%] mx-auto">--Best Project--</h3>
+        <div class="text-center">
+          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic inline-block border-b-2 border-black pb-1 lg:pb-2">--Best Project--</h3>
           <p class="w-full sm:w-[78%] md:w-[73%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">Our home service is dedicated to providing exceptional quality and convenience, ensuring that every client feels valued and supported. With a team of experienced professionals.</p>
          </div>
         <!-- title section end -->
@@ -331,6 +331,52 @@
         </div>
       </section>
      <!-- faqs section end -->
+      <!-- our-sponsored section start -->
+       <section class="mt-5 mb-7">
+        <div class="container mx-auto px-5 xl:px-10">
+           <!-- title section start -->
+        <div class="text-center">
+          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic border-b-2 border-black pb-1 lg:pb-2  inline-block">--our Sponsored--</h3>
+          <p class="w-full sm:w-[78%] md:w-[73%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">High-quality image of a beautiful house.To connect families with their ideal homes.</p>
+         </div>
+        <!-- title section end -->
+          <!-- content section start -->
+           <div class="grid grid-cols-2 xl:grid-cols-6 gap-5 mt-3">
+            <!-- item start -->
+            <div class="">
+              <img src="/img/spon/img1.png" class="xl:w-24 xl:h-16 mx-auto">
+            </div>
+            <!-- item end -->
+            <!-- item start -->
+            <div class="">
+              <img src="/img/spon/img2.png" class="xl:w-24 xl:h-16 mx-auto">
+            </div>
+            <!-- item end -->
+            <!-- item start -->
+            <div class="">
+              <img src="/img/spon/img3.png" class="xl:w-24 xl:h-16 mx-auto">
+            </div>
+            <!-- item end -->
+            <!-- item start -->
+            <div class="">
+              <img src="/img/spon/img4.png" class="xl:w-24 xl:h-16 mx-auto">
+            </div>
+            <!-- item end -->
+            <!-- item start -->
+            <div class="">
+              <img src="/img/spon/img5.png" class="xl:w-24 xl:h-16 mx-auto">
+            </div>
+            <!-- item end -->
+            <!-- item start -->
+            <div class="">
+              <img src="/img/spon/img6.png" class="xl:w-24 xl:h-16 mx-auto">
+            </div>
+            <!-- item end -->
+           </div>
+          <!-- content section end -->
+        </div>
+       </section>
+      <!-- our-sponsored section end -->
     <!-- footer section start -->
      <section class="py-12 bg-[#E76F51]">
       <div class="container mx-auto px-5 sm:px-3 md:px-4 lg:px-5">
