responsive the our-sponsored section

--- a/index.html
+++ b/index.html
@@ -337,39 +337,39 @@
            <!-- title section start -->
         <div class="text-center">
           <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic border-b-2 border-black pb-1 lg:pb-2  inline-block">--our Sponsored--</h3>
-          <p class="w-full sm:w-[78%] md:w-[73%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">High-quality image of a beautiful house.To connect families with their ideal homes.</p>
+          <p class="w-full sm:w-[78%] md:w-[60%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">High-quality image of a beautiful house.To connect families with their ideal homes.</p>
          </div>
         <!-- title section end -->
           <!-- content section start -->
-           <div class="grid grid-cols-2 xl:grid-cols-6 gap-5 mt-3">
+           <div class="grid grid-cols-3 sm:grid-cols-6 gap-5 sm:gap-3 md:gap-4 lg:gap-5 xl:gap-4 2xl:gap-5 mt-3">
             <!-- item start -->
             <div class="">
-              <img src="/img/spon/img1.png" class="xl:w-24 xl:h-16 mx-auto">
+              <img src="/img/spon/img1.png" class="w-full h-6 sm:w-full sm:h-7 md:w-full md:h-8 lg:w-2/3 lg:h-12 xl:w-2/3 xl:h-16 2xl:w-3/4 2xl:h-16 mx-auto">
             </div>
             <!-- item end -->
             <!-- item start -->
             <div class="">
-              <img src="/img/spon/img2.png" class="xl:w-24 xl:h-16 mx-auto">
+              <img src="/img/spon/img2.png" class="w-full h-6 sm:w-full sm:h-7 md:w-full md:h-8 lg:w-2/3 lg:h-12 xl:w-2/3 xl:h-16 2xl:w-3/4 2xl:h-16 mx-auto">
             </div>
             <!-- item end -->
             <!-- item start -->
             <div class="">
-              <img src="/img/spon/img3.png" class="xl:w-24 xl:h-16 mx-auto">
+              <img src="/img/spon/img3.png" class="w-full h-6 sm:w-full sm:h-7 md:w-full md:h-8 lg:w-2/3 lg:h-12 xl:w-2/3 xl:h-16 2xl:w-3/4 2xl:h-16 mx-auto">
             </div>
             <!-- item end -->
             <!-- item start -->
             <div class="">
-              <img src="/img/spon/img4.png" class="xl:w-24 xl:h-16 mx-auto">
+              <img src="/img/spon/img4.png" class="w-full h-6 sm:w-full sm:h-7 md:w-full md:h-8 lg:w-2/3 lg:h-12 xl:w-2/3 xl:h-16 2xl:w-3/4 2xl:h-16 mx-auto">
             </div>
             <!-- item end -->
             <!-- item start -->
             <div class="">
-              <img src="/img/spon/img5.png" class="xl:w-24 xl:h-16 mx-auto">
+              <img src="/img/spon/img5.png" class="w-full h-6 sm:w-full sm:h-7 md:w-full md:h-8 lg:w-2/3 lg:h-12 xl:w-2/3 xl:h-16 2xl:w-3/4 2xl:h-16 mx-auto">
             </div>
             <!-- item end -->
             <!-- item start -->
             <div class="">
-              <img src="/img/spon/img6.png" class="xl:w-24 xl:h-16 mx-auto">
+              <img src="/img/spon/img6.png" class="w-full h-6 sm:w-full sm:h-7 md:w-full md:h-8 lg:w-2/3 lg:h-12 xl:w-2/3 xl:h-16 2xl:w-3/4 2xl:h-16 mx-auto">
             </div>
             <!-- item end -->
            </div>
