create contact form responsive

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
                     <summary class="btn btn-sm bg-[#FF4240] hover:bg-orange-500 border-none"><i class='bx bx-menu text-xl text-white'></i></summary>
                     <ul class="menu dropdown-content bg-[#FF4240] rounded-box z-[1] w-52 p-2 shadow right-0">
                       <li><a class="text-xs text-slate-200" href="index.html">Home</a></li>
-                <li><a class="text-xs" href="#">Services</a></li>
-                <li><a class="text-xs" href="#">Contact</a></li>
-                <li><a class="text-xs" href="#">FAQs</a></li>
+                <li><a class="text-xs" href="#services">Services</a></li>
+                <li><a class="text-xs" href="#contact">Contact</a></li>
+                <li><a class="text-xs" href="#faqs">FAQs</a></li>
                     </ul>
                   </details>
                   
@@ -54,8 +54,8 @@
               <ul class="hidden sm:flex items-center gap-5 sm:gap-5 md:gap-4 lg:gap-5 xl:gap-6 w-full justify-center sm:justify-end">
                 <li><a class="sm:text-xs md:text-sm lg:text-base xl:text-base 2xl:text-xl text-[#FF4240]" href="index.html">Home</a></li>
                 <li><a class="sm:text-xs md:text-sm lg:text-base xl:text-base 2xl:text-xl text-[#FF4240]" href="#services">Services</a></li>
-                <li><a class="sm:text-xs md:text-sm lg:text-base xl:text-base 2xl:text-xl text-[#FF4240]" href="#">Contact</a></li>
-                <li><a class="sm:text-xs md:text-sm lg:text-base xl:text-base 2xl:text-xl text-[#FF4240]" href="#">FAQs</a></li>
+                <li><a class="sm:text-xs md:text-sm lg:text-base xl:text-base 2xl:text-xl text-[#FF4240]" href="#contact">Contact</a></li>
+                <li><a class="sm:text-xs md:text-sm lg:text-base xl:text-base 2xl:text-xl text-[#FF4240]" href="#faqs">FAQs</a></li>
               </ul>
               <!-- navigation section end -->
             </div>
@@ -331,6 +331,80 @@
         </div>
       </section>
      <!-- faqs section end -->
+    <!-- contact section start -->
+      <section id="contact" class="my-12">
+        <div class="container mx-auto px-5 xl:px-10">
+            <!-- title section start -->
+        <div class="text-center">
+          <h3 class="text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl 2xl:text-5xl font-bold italic border-b-2 border-black pb-1 lg:pb-2  inline-block">--Contact Us--</h3>
+          <p class="w-full sm:w-[78%] md:w-[73%] lg:w-[65%] xl:w-[60%] 2xl:w-[58%] text-xs sm:text-sm md:text-base lg:text-base xl:text-base 2xl:text-xl text-gray-400 text-center mx-auto mt-4">We've compiled the best real-life examples of Contact Us pages on the web plus some affordable templates to inspire your own.</p>
+         </div>
+        <!-- title section end -->
+          <!-- content section start -->
+           <div class="flex flex-col sm:flex-row justify-between items-center gap-5 sm:gap-3 md:gap-3 lg:gap-4 xl:gap-5 2xl:gap-6 mt-5">
+            <!-- left start -->
+             <div class="flex-1">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt voluptas fugit distinctio. Quisquam odit quae id vero eaque, consequatur fuga.</p>
+             </div>
+            <!-- left end -->
+             <!-- right start -->
+              <div class="flex-1 w-full">
+                <form class="border-[1px] border-gray-200 rounded-xl p-5 w-full">
+                  <ul>
+                    <li class="text-xl sm:text-xl md:text-xl lg:text-2xl xl:text-3xl 2xl:text-3xl font-bold">
+                      Contact
+                    </li>
+                    <li class="flex flex-col md:flex-row justify-between items-center gap-2 sm:gap-1 md:gap-2 lg:gap-3 xl:gap-4 2xl:gap-5">
+                      <div class="form-control w-full">
+                        <label class="label">
+                          <span class="label-text">Name</span>
+                        </label>
+                        <input type="text" placeholder="name" class="input input-bordered input-sm lg:input-md" required />
+                      </div>
+                      <div class="form-control w-full">
+                        <label class="label">
+                          <span class="label-text">Email</span>
+                        </label>
+                        <input type="email" placeholder="email" class="input input-bordered input-sm lg:input-md" required />
+                      </div>
+                    </li>
+                    <li class="flex flex-col md:flex-row justify-between items-center gap-2 sm:gap-1 md:gap-2 lg:gap-3 xl:gap-4 2xl:gap-5">
+                      <div class="form-control w-full">
+                        <label class="label">
+                          <span class="label-text">Service</span>
+                        </label>
+                        <input type="text" placeholder="service name" class="input input-bordered input-sm lg:input-md" required />
+                      </div>
+                      <div class="form-control w-full">
+                        <label class="label">
+                          <span class="label-text">Phone</span>
+                        </label>
+                        <input type="text" placeholder="phone" class="input input-bordered input-sm lg:input-md" required />
+                      </div>
+                    </li>
+                    <li class="">
+                      <div class="form-control w-full">
+                        <label class="label">
+                          <span class="label-text">Details</span>
+                        </label>
+                        <textarea placeholder="details"
+  class="textarea textarea-bordered textarea-md w-full"></textarea>
+                      </div>
+                    </li>
+                    <li class="">
+                      <div class="form-control mt-3 xl:mt-4">
+                        <button class="btn btn-sm xl:btn-md bg-red-500 hover:bg-red-500 text-white">Contact</button>
+                      </div>
+                    </li>
+                  </ul>
+                </form>
+              </div>
+             <!-- right end -->
+           </div>
+          <!-- content section end -->
+        </div>
+      </section>
+    <!-- contact section end -->
       <!-- our-sponsored section start -->
        <section class="mt-5 mb-7">
         <div class="container mx-auto px-5 xl:px-10">
@@ -378,13 +452,33 @@
        </section>
       <!-- our-sponsored section end -->
     <!-- footer section start -->
-     <section class="py-12 bg-[#E76F51]">
+     <section class="py-12 bg-[#131318]">
       <div class="container mx-auto px-5 sm:px-3 md:px-4 lg:px-5">
         <!-- top footer section start -->
-        <footer class="text-base-content grid grid-cols-2 sm:grid-cols-4 xl:grid-cols-4 sm:gap-1">
+        <footer class="text-base-content grid grid-cols-2 sm:grid-cols-4 xl:grid-cols-4 gap-5 sm:gap-3 md:gap-4 lg:gap-5 xl:gap-8">
+          <ul class="space-y-1 sm:space-y-2  2xl:space-y-2">
+            <li>
+              <h6 class="footer-title text-[#FF4240]">Get In Touch</h6>
+            </li>
+            <li>
+              <p class="text-xs sm:text-[11px] md:text-xs lg:text-[13px] xl:text-sm 2xl:text-lg text-slate-200">In the bustling town of Elderview, <br class="hidden lg:block">five friends navigated life’s twists<br class="hidden lg:block">and turns together</p>
+            </li>
+            <li>
+              <span class="flex items-center gap-2">
+                <i class='bx bxs-envelope text-[#FF4240] text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl'></i>
+                <a href="#" class="text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-sm 2xl:text-lg text-slate-200"> abcd@gmail.com</a>
+              </span>
+            </li>
+            <li>
+              <span class="flex items-center gap-2">
+                <i class='bx bxs-phone text-[#FF4240] text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-base 2xl:text-xl'></i>
+                <a href="#" class="text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-sm 2xl:text-lg text-slate-200">+0018123456</a>
+              </span>
+            </li>
+          </ul>
           <ul class="space-y-1 2xl:space-y-2">
             <li>
-              <h6 class="footer-title text-black">Quick Links</h6>
+              <h6 class="footer-title text-[#FF4240]">Quick Links</h6>
             </li>
             <li>
               <a href="#" class="text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-sm 2xl:text-xl text-slate-200">Home</a>
@@ -399,10 +493,9 @@
               <a href="#" class="text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-sm 2xl:text-xl text-slate-200">FAQs</a>
             </li>
           </ul>
-          </ul>
           <ul class="space-y-1 2xl:space-y-2">
             <li>
-              <h6 class="footer-title text-black">Our Service</h6>
+              <h6 class="footer-title text-[#FF4240]">Our Service</h6>
             </li>
             <li>
               <a href="#" class="text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-sm 2xl:text-xl text-slate-200">Hourly Rate</a>
@@ -419,28 +512,12 @@
           </ul>
           <ul class="space-y-1 2xl:space-y-2">
             <li>
-              <h6 class="footer-title text-black">Helps</h6>
+              <h6 class="footer-title text-[#FF4240]">Helps</h6>
             </li>
             <li><a href="#" class="text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-sm 2xl:text-xl text-slate-200">Privacy policy</a></li>
             <li><a href="#" class="text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-sm 2xl:text-xl text-slate-200">FAQs</a></li>
             <li><a href="#" class="text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-sm 2xl:text-xl text-slate-200">Contact Us</a></li>
             <li><a href="#" class="text-[11px] sm:text-[10px] md:text-xs lg:text-sm xl:text-sm 2xl:text-xl text-slate-200">Discount</a></li>
-          </ul>
-          <ul class="space-y-1 2xl:space-y-2">
-            <li>
-              <h6 class="footer-title text-black">Subscribed</h6>
-            </li>
-            <li class="relative xl:w-[85%] 2xl:w-[80%]">
-              <input type="email" placeholder="Enter your email" class="w-full  p-1 lg:p-2 focus-visible:outline-none">
-              <button class="absolute top-0 right-0 bottom-0 bg-[#264653] px-2 text-white text-[10px] sm:text-[10px] md:text-xs lg:text-sm xl:text-base 2xl:text-lg">Submit</button>
-            </li>
-            <li class="flex gap-2 sm:gap-3 md:gap-3 lg:gap-4 xl:gap-5 items-center pt-3">
-              <i class='bx bxl-facebook-circle text-xl sm:text-xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl text-gray-200'></i>
-              <i class='bx bxl-instagram-alt text-xl sm:text-xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl text-gray-200'></i>
-              <i class='bx bxl-twitter text-xl sm:text-xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl text-gray-200'></i>
-              <i class='bx bxl-whatsapp-square text-xl sm:text-xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl text-gray-200'></i>
-              <i class='bx bxl-tiktok text-xl sm:text-xl md:text-2xl lg:text-2xl xl:text-3xl 2xl:text-4xl text-gray-200'></i>
-            </li>
           </ul>
         </footer>
         <!-- top footer section end -->
@@ -449,7 +526,18 @@
          <!-- horizontal section end -->
          <!-- bottom footer section start -->
           <footer>
-            <p class="text-slate-200 text-xs md:text-[13px] lg:text-sm xl:text-base 2xl:text-xl text-center">Copyright © 2024 All right reserved</p>
+            <ul class="flex flex-col sm:flex-row justify-between items-center gap-2">
+              <li>
+                <p class="text-slate-200 text-xs md:text-[13px] lg:text-sm xl:text-base 2xl:text-xl text-center sm:text-left">Copyright © 2024 All right reserved</p>
+              </li>
+              <li>
+                <i class='text-[#FF4240] text-lg sm:text-lg lg:text-xl xl:text-2xl bx bxl-facebook-circle' ></i>
+                <i class='text-[#FF4240] text-lg sm:text-lg lg:text-xl xl:text-2xl bx bxl-twitter' ></i>
+                <i class='text-[#FF4240] text-lg sm:text-lg lg:text-xl xl:text-2xl bx bxl-instagram-alt' ></i>
+                <i class='text-[#FF4240] text-lg sm:text-lg lg:text-xl xl:text-2xl bx bxl-linkedin-square'></i>
+              </li>
+            </ul>
+            
           </footer>
          <!-- bottom footer section end -->
       </div>
